# we-upload

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  setup.py  status.md  terragrunt.hcl
.github/workflows/: cd-dev.yml  cd.yml  ci.yml  simple-ci.yml  tests.yml
api/: Dockerfile
api/app/: main.py
api/app/core/: __init__.py  config.py  security.py
api/app/db/: base.py  base_class.py  init_db.py  session.py
api/app/dependencies/: auth.py
api/app/models/: __init__.py  file.py  user.py
api/app/routers/: files.py  health.py  login.py  users.py
api/app/schemas/: __init__.py  file.py  token.py  user.py
api/app/services/: file_service.py  user_service.py
app/: __init__.py  main.py
app/core/: config.py  logging.py  security.py
app/db/: __init__.py  base.py  base_class.py  init_db.py  relations.py  session.py
app/dependencies/: __init__.py  auth.py
app/models/: file.py  user.py
app/routers/: __init__.py  files.py  health.py  login.py  users.py
app/schemas/: file.py  token.py  user.py
app/services/: file_service.py  user_service.py
docs/: cloudwatch_testing_plan.md  fastapi_guide.md  implementation_plan.md  pydantic_guide.md  status.md  terraform-header.md  type_fixing_plan.md  typing_fixes.md
scripts/: fix_linting.sh  generate_terraform_docs.sh  init-terragrunt.sh  load_test.sh  push_to_github.sh  run_integration_tests.sh  run_tests.sh  test_pre_push_hooks.sh  update_type_annotations.py
terraform/: .gitignore  README.md  cleanup.sh  deploy.sh  main.tf  outputs.tf  provider.tf  variables.tf
terraform/environments/dev/: README.md  main.tf  outputs.tf  variables.tf
terraform/environments/prod/: main.tf  outputs.tf  variables.tf
terraform/examples/basic/: README.md  main.tf
terraform/files/: cloudwatch-agent-config.json
terraform/modules/app/: main.tf  outputs.tf  variables.tf
terraform/modules/ec2/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/iam/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/rds/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/s3/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: README.md  main.tf  outputs.tf  variables.tf
terraform/state-management/: main.tf
terragrunt/: README.md
terragrunt/dev/: env.hcl
terragrunt/dev/app/: terragrunt.hcl
terragrunt/dev/s3/: terragrunt.hcl
terragrunt/dev/vpc/: terragrunt.hcl
terragrunt/prod/: env.hcl  terragrunt.hcl
terragrunt/prod/app/: terragrunt.hcl
terragrunt/prod/s3/: terragrunt.hcl
terragrunt/prod/vpc/: terragrunt.hcl
tests/: __init__.py  conftest.py  test_api_integration.py  test_basic_file_api.py  test_utils.py  test_version.py
