[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "we-upload"
version = "0.1.0"
description = "Multi-User File Upload & Sharing Backend with FastAPI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "We-Upload Team"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.2",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.6",
    "boto3>=1.28.62",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.3",
    "mypy>=1.6.1",
    "black>=23.10.1",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "moto>=4.2.5",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "N",    # pep8-naming
    "D",    # pydocstyle
]
ignore = [
    "B008",  # Do not perform function call in argument defaults (needed for FastAPI)
    "B904",  # Use 'raise ... from err' (too many instances to fix at once)
    "RET504", # Unnecessary variable assignment before return
    "RET505", # Unnecessary elif after return
    "RET506", # Unnecessary elif after raise
    "ARG001", # Unused function argument (needed for route handlers)
    "SIM108", # Use ternary operator instead of if-else block
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
    "venv",
    ".venv",
    "alembic",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
warn_return_any = false  # Temporarily disable any-return warnings
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true  # Add global ignore for missing imports

[[tool.mypy.overrides]]
module = ["alembic.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=app"
